@@ -8,4 +8,4 @@ void f () {}
 
 // Check that the strlen declaration here is given internal linkage by
 // using it as a non-type template argument, and expecting an error.
-template void f<strlen>(); // { dg-error "" } no matching template
+template void f<strlen>(); // { dg-error "" "" { target c++98 } } no matching template
